<resources>
    <string name="app_name">CheckUP</string>
    <string name="email">Email</string>
    <string name="checkup">-CheckUP-</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign UP</string>
    <string name="profile_image">PROFILE_IMAGE</string>
    <string name="remember_me">Remember Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="map">map</string>
    <string name="profile">profile</string>
    <string name="your_email">Your Email:</string>
    <string name="youremail">Youremail</string>
    <string name="yourname">Yourname</string>
    <string name="your_name">Your Name :</string>
    <string name="your_points">Your Points:</string>
    <string name="yourphone">Yourphone</string>
    <string name="yourpoints">Yourpoints</string>
    <string name="add_number">Add Number</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="enter_address">Enter Address</string>
</resources>