<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignupPage">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:contentDescription="@string/profile_image"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/checkup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        android:clickable="true"
        android:src="@drawable/user"
        android:focusable="true" />

    <TextView
        android:id="@+id/checkup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/yanone_medium"
        android:letterSpacing="0.12"
        android:text="@string/checkup"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:inputType="textShortMessage"
        android:hint="@string/enter_your_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signup_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="textShortMessage"
        android:hint="@string/enter_your_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_create"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:backgroundTint="#001d3d"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_username" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_cancel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:backgroundTint="#001d3d"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_create" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="242dp" />


</androidx.constraintlayout.widget.ConstraintLayout>